tests/ui/fail/log_non_error_err.rs
extern crate emit;

fn main() {
    emit::info!("something went wrong ({err: 42})");
}
